Margin fix (bottom scrollbars)

--- a/assets/style.css
+++ b/assets/style.css
@@ -116,9 +116,7 @@ td a, th a {display: inline-block; height:100%; width:100%;}
     height:34px;
     position:relative;
     color:#a5a5a5;
-    font-size:small;   
-	width:100%;
-	
+    font-size:small;
 }
 .jPaginate a{
     line-height:15px;
